--- a/charts/lgtm-distributed/values.yaml
+++ b/charts/lgtm-distributed/values.yaml
@@ -3,6 +3,48 @@ grafana:
   # -- Deploy Grafana if enabled. See [upstream readme](https://github.com/grafana/helm-charts/tree/main/charts/grafana#configuration) for full values reference.
   enabled: true
 
+  # -- Overwrite subcharts' dependencies
+  ingress:
+    enabled: true
+    # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
+    # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
+    ingressClassName: nginx
+    # Values can be templated
+    annotations: 
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+      nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
+      nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
+    labels: {}
+    path: /
+  
+    # pathType is only for k8s >= 1.1=
+    pathType: Prefix
+  
+    hosts:
+      - grafana.localdev.me
+    ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
+    extraPaths: []
+    # - path: /*
+    #   backend:
+    #     serviceName: ssl-redirect
+    #     servicePort: use-annotation
+    ## Or for k8s > 1.19
+    # - path: /*
+    #   pathType: Prefix
+    #   backend:
+    #     service:
+    #       name: ssl-redirect
+    #       port:
+    #         name: use-annotation
+  
+  
+    tls:
+     - secretName: grafana-tls
+       hosts:
+         - grafana.localdev.me
+
   # -- Grafana data sources config. Connects to all three by default
   datasources:
     datasources.yaml:
